--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header class="header-container">
+       <div class="header-section">
+        <div>
+            <div class="header-left-side">
+                <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal
+                    distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+        </div>
+        <div>
+            <img src="Flower Asset/pngwing 6.png" alt="">
+        </div>
+       </div>
+ </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
