--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
         </div>
        </div>
  </header>
-    <main>
+ <!-- main section start -->
+ <!-- our featured flower section -->
+
+    <main class="main-container">
+        <section>
+            <div class="flower-feature">
+                <h1>Our Featured Flowers</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="pink-flower">
+                <div class="flower-div ">
+                    <img class="flower-img img-bg-color-1 " src="Flower Asset/pngwing 10.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+                <div class="flower-div">
+                    <img class="flower-img img-bg-color-2 " src="Flower Asset/pngwing 5.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+                <div class="flower-div">
+                    <img class="flower-img img-bg-color-3 " src="Flower Asset/pngwing 7.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
