sale and deal section commited

--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
 
 <body>
     <header class="header-container">
-       <div class="header-section">
-        <div>
-            <div class="header-left-side">
-                <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
-                    looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal
-                    distribution of letters.</p>
-                <button class="btn-primary">Shop Now</button>
+        <div class="header-section">
+            <div>
+                <div class="header-left-side">
+                    <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a
+                        page when
+                        looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal
+                        distribution of letters.</p>
+                    <button class="btn-primary">Shop Now</button>
+                </div>
+            </div>
+            <div>
+                <img src="Flower Asset/pngwing 6.png" alt="">
             </div>
         </div>
-        <div>
-            <img src="Flower Asset/pngwing 6.png" alt="">
-        </div>
-       </div>
- </header>
- <!-- main section start -->
- <!-- our featured flower section -->
+    </header>
+    <!-- main section start -->
+    <!-- our featured flower section -->
 
     <main class="main-container">
         <section>
             <div class="flower-feature">
                 <h1>Our Featured Flowers</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
             </div>
 
             <div class="pink-flower">
@@ -47,6 +49,21 @@
                 <div class="flower-div">
                     <img class="flower-img img-bg-color-3 " src="Flower Asset/pngwing 7.png" alt="">
                     <p>Pink Flower Tree</p>
+                </div>
+            </div>
+        </section>
+        <!-- hot deal,sale up section -->
+
+        <section class="header-container sale-up-container ">
+            <div class="header-section ">
+                <div class="deal-part">
+                    <h2>Hot Deal ! Sale Up To 25% Off</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a
+                        page when looking at its layout.</p>
+                    <button class="btn-primary ">Sign Up</button>
+                </div>
+                <div>
+                    <img src="Flower Asset/pngwing 8.png" alt="">
                 </div>
             </div>
         </section>
