subscribe section added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
                 </div>
             </div>
         </section>
+        <!-- subscribe section start  -->
+        <section class="subscribe-container" >
+            <div class="main-div">
+                <div class="flower-feature latest deal">
+                    <h1>Get The Latest Deals</h1>
+                    <p>$30 coupon for first shopping</p>
+                </div>
+                <div class="btn-div">
+                    <input class="input" placeholder="Enter your email here...."></input>
+                    <button class="btn-primary">subscribe</button>
+                </div>
+            </div>
+        </section>
 
 
     </main>
